// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio component renders a disabled radio button 1`] = `
@media  {
  .c-jHqXTB {
    height: 6px;
    width: 6px;
    border-radius: var(--radii-round);
    background-color: currentcolor;
    position: absolute;
  }

  .c-jhmwMa {
    align-items: center;
    -webkit-appearance: none;
    appearance: none;
    background-color: transparent;
    border: 1px solid var(--colors-grey800);
    border-radius: var(--radii-round);
    color: white;
    cursor: pointer;
    display: flex;
    justify-content: center;
    padding: 0;
    height: var(--sizes-1);
    width: var(--sizes-1);
    transition: all 50ms ease-out;
  }

  .c-jhmwMa:focus {
    outline: 2px solid var(--colors-primary800);
    outline-offset: 1px;
  }

  .c-jhmwMa[data-state="checked"] {
    background-color: var(--colors-primary800);
    border-color: var(--colors-primary800);
  }

  .c-jhmwMa[disabled] {
    background-color: var(--colors-grey200);
    border-color: var(--colors-grey800);
    color: var(--colors-grey800);
    cursor: not-allowed;
  }

  .c-iSwBqf {
    display: flex;
    flex-wrap: wrap;
  }
}

<div>
  <div
    aria-required="false"
    class="c-iSwBqf"
    dir="ltr"
    role="radiogroup"
    style="outline: none;"
    tabindex="-1"
  >
    <button
      aria-checked="false"
      aria-label="disabled indicator"
      class="c-jhmwMa"
      data-disabled=""
      data-radix-collection-item=""
      data-state="unchecked"
      disabled=""
      role="radio"
      tabindex="-1"
      type="button"
      value="value"
    />
  </div>
</div>
`;

exports[`Radio component renders a radio button 1`] = `
@media  {
  .c-jHqXTB {
    height: 6px;
    width: 6px;
    border-radius: var(--radii-round);
    background-color: currentcolor;
    position: absolute;
  }

  .c-jhmwMa {
    align-items: center;
    -webkit-appearance: none;
    appearance: none;
    background-color: transparent;
    border: 1px solid var(--colors-grey800);
    border-radius: var(--radii-round);
    color: white;
    cursor: pointer;
    display: flex;
    justify-content: center;
    padding: 0;
    height: var(--sizes-1);
    width: var(--sizes-1);
    transition: all 50ms ease-out;
  }

  .c-jhmwMa:focus {
    outline: 2px solid var(--colors-primary800);
    outline-offset: 1px;
  }

  .c-jhmwMa[data-state="checked"] {
    background-color: var(--colors-primary800);
    border-color: var(--colors-primary800);
  }

  .c-jhmwMa[disabled] {
    background-color: var(--colors-grey200);
    border-color: var(--colors-grey800);
    color: var(--colors-grey800);
    cursor: not-allowed;
  }

  .c-iSwBqf {
    display: flex;
    flex-wrap: wrap;
  }
}

<div>
  <div
    aria-required="false"
    class="c-iSwBqf"
    dir="ltr"
    role="radiogroup"
    style="outline: none;"
    tabindex="0"
  >
    <button
      aria-checked="false"
      aria-label="indicator"
      class="c-jhmwMa"
      data-radix-collection-item=""
      data-state="unchecked"
      role="radio"
      tabindex="-1"
      type="button"
      value="value"
    />
  </div>
</div>
`;
